--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.1",
+    "@types/plotly.js": "^1.35.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "ng2-google-charts": "^3.4.0",
+    "plotly.js": "^1.35.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
