--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ cache:
   paths:
     - node_modules/
 
-test_letslearn:
+Angular Tests:
   script:
     - npm install
     - ./node_modules/@angular/cli/bin/ng test --single-run=true --browsers PhantomJS --watch=false
