Added PhantomJS for frontend testing

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/plotly.js": "^1.35.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "intl": "^1.2.5",
     "ng2-google-charts": "^3.4.0",
     "plotly.js": "^1.35.2",
     "rxjs": "^5.5.6",
@@ -45,6 +46,8 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "phantomjs-prebuilt": "^2.1.16",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
